# yadisk

./: .flake8  .gitattributes  .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  CONTRIBUTORS.rst  MANIFEST.in  README.en.rst  README.rst  README.ru.rst  pyproject.toml  requirements-dev.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report--english-.md  bug-report--русский-.md  feature-request--english-.md  feature-request--русский-.md  question--english-.md  question--русский-.md
.github/workflows/: lint_and_test.yml
docs/: Makefile  changelog.rst  conf.py  docs.rst  index.rst  intro.rst  known_issues.rst  make.bat  migration_guide.rst  requirements.txt
docs/api_reference/: async_api.rst  exceptions.rst  general_parameters.rst  index.rst  low_level_api.rst  response_objects.rst  session_interface.rst  sessions.rst  settings.rst  sync_api.rst  types.rst  utilities.rst
src/yadisk/: __init__.py  _async_client.py  _async_client.pyi  _async_session.py  _client.py  _client.pyi  _client_common.py  _common.py  _compat.py  _import_session.py  _session.py  _typing_compat.py  async_client.py  async_session.py  client.py  client_common.py  common.py  compat.py  exceptions.py  import_session.py  session.py  settings.py  types.py  utils.py
src/yadisk/_api/: __init__.py  api_request.py  auth.py  disk.py  operations.py  resources.py
src/yadisk/api/: __init__.py  _api_request.py  _auth.py  _disk.py  _operations.py  _resources.py  api_request.py  auth.py  disk.py  operations.py  resources.py
src/yadisk/objects/: __init__.py  _auth.py  _disk.py  _error_object.py  _link_object.py  _operations.py  _operations.pyi  _resources.py  _resources.pyi  _yadisk_object.py  auth.py  disk.py  error_object.py  link_object.py  operations.py  resources.py  yadisk_object.py
src/yadisk/sessions/: __init__.py  _httpx_common.py  aiohttp_session.py  async_httpx_session.py  httpx_common.py  httpx_session.py  pycurl_session.py  requests_session.py
tests/: .env  __init__.py  async_client_test.py  auth_test.py  auto_retry_test.py  client_test.py  config.py  conftest.py  disk_gateway.py  import_session_test.py  requirements.txt  resources_test.py  test_session.py  yadisk_test.py
tests/recorded/async/: test_check_token.json  test_copy.json  test_download_by_link_error.json  test_get_disk_info.json  test_get_meta.json  test_get_public_resources.json  test_is_file.json  test_listdir.json  test_listdir_fields.json  test_listdir_on_file.json  test_listdir_with_limits.json  test_listdir_with_max_items.json  test_makedirs_with_schema.json  test_makedirs_without_schema.json  test_mkdir_and_exists.json  test_move.json  test_operation_error_triggers_retry.json  test_patch.json  test_public_listdir.json  test_public_settings.json  test_publish_unpublish.json  test_remove_trash.json  test_rename.json  test_restore_trash.json  test_save_to_disk.json  test_streaming_requests.json  test_upload_and_download.json  test_upload_and_download_async.json  test_upload_download_non_seekable.json  test_upload_url.json  test_wait_for_operation.json
tests/recorded/sync/: test_auth.json  test_check_token.json  test_copy.json  test_device_code_auth.json  test_get_files.json  test_get_meta.json  (+28 more)
yadisk/: YaDisk.py  __init__.py  async_client.py  async_session.py  auth_methods_mixin.py  client.py  client_common.py  common.py  compat.py  disk_methods_mixin.py  exceptions.py  httpx_session.py  import_session.py  operation_methods_mixin.py  requests_session.py  resource_methods_mixin.py  session.py  settings.py  types.py  utils.py  yadisk.py
yadisk/api/: APIRequest.py  __init__.py  api_request.py  auth.py  disk.py  operations.py  resources.py
yadisk/functions/: __init__.py  auth.py  disk.py  operations.py  resources.py
yadisk/objects/: ErrorObject.py  YaDiskObject.py  __init__.py  auth.py  disk.py  error_object.py  link_object.py  operations.py  resources.py  yadisk_object.py
yadisk/sessions/: aiohttp_session.py  async_httpx_session.py  httpx_common.py  httpx_session.py  pycurl_session.py  requests_session.py
(+172 files in other folders)
