[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["yadisk"]

[project]
name = "yadisk"
dynamic = ["version"]
description = "Библиотека-клиент REST API Яндекс.Диска / Yandex.Disk REST API client library"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "LGPLv3"}
keywords = ["yandex.disk", "yandex", "rest"]
authors = [
    {name = "Ivan Konovalov", email = "ivknv0@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = ["typing_extensions"]

[tool.setuptools.dynamic]
version = {attr = "yadisk.__version__"}

[project.optional-dependencies]
sync_defaults = ["requests"]
async_defaults = ["aiofiles", "httpx"]
dev = ["requests", "aiofiles", "httpx", "aiohttp", "pycurl"]
test = ["requests", "aiofiles", "httpx", "aiohttp", "pycurl"]

[project.urls]
"Source code" = "https://github.com/ivknv/yadisk"
"Documentation (EN)" = "https://yadisk.readthedocs.io/en/latest"
"Documentation (RU)" = "https://yadisk.readthedocs.io/ru/latest"
"Bug tracker" = "https://github.com/ivknv/yadisk/issues"
